# advent-of-code-2024

./: .gitignore  Cargo.toml  cargo.toml
.github/workflows/: codspeed.yml
benches/: bench.rs  bench_days.rs
src/: lib.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day16/: mod.rs
src/day19/: mod.rs
src/day2/: mod.rs
src/day25/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
