[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[profile.release]
debug = true

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
regex = "1.11.1"
rustc-hash = "2.1.0"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", default-features = false }
indoc = "2.0.5"
paste = "1.0.15"


[[bench]]
name = "bench_days"
harness = false
